--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .contact {
@@ -27,6 +29,8 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  width: 100%;
+  height: 100%;
 }
 
 #menu {
