--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
   background-size: cover;
   width: 100%;
   height: 100%;
+  min-height:100%;
 }
 
 .contact {
@@ -31,6 +32,7 @@
   background-size: cover;
   width: 100%;
   height: 100%;
+  min-height:100%;
 }
 
 #menu {
